--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Esame_20140703_B</name>
+	<name>TdP_esami-2014-07-03_B</name>
 	<comment></comment>
 	<projects>
 	</projects>
